--- a/pages/comics.html
+++ b/pages/comics.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>Comics</title>
+    <title>Comics - Lista de comics</title>
+    <meta name="description" content="Lista de cómics presentes en la Biblioteca Portal del Conocimiento de Knowledge City">
 </head>
 
 <body>
