--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>Contacto</title>
+    <title>Contacto - Formulario para contactarse con la biblioteca</title>
+    <meta name="description" content="Contacto con la Biblioteca Portal del Conocimiento de Knowledge City llenando un breve formulario y con gusto te contestaremos.">
 </head>
 <body>
     <!-- Header con logo y barra de navegación -->
