--- a/pages/libros.html
+++ b/pages/libros.html
@@ -6,7 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>Catálogo de Libros</title>
+    <title>Catálogo de Libros - Búsqueda de libros</title>
+    <meta name="description" content="Buscar libros de la colección de la Biblioteca Portal del Conocimiento de Knowledge City por tema o materia, título, autor, editorial y otros criterios"
 </head>
 <body>
     <!-- Header con logo y barra de navegación -->
