--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -6,7 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>Recursos de información</title>
+    <title>Recursos de información - Libros y otros materiales</title>
+    <meta name="description" content="Además de libros sobre diversos temas, la Biblioteca del Conocimiento de Knowledge City cuenta con revistas y cómics."
 </head>
 <body>
     <!-- Header con logo y barra de navegación -->
