--- a/pages/revistas.html
+++ b/pages/revistas.html
@@ -6,7 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>Revistas</title>
+    <title>Revistas - Suscripciones</title>
+    <meta name="description" content="	Mirar la lista de suscripciones, es decir, las revistas que recibimos periodicamente en la Biblioteca Portal del Conocimiento de Knowledge City">
 </head>
 <body>
     <!-- Header con logo y barra de navegación -->
