--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>Servicios</title>
+    <title>Servicios o en qué te podemos ayudar</title>
+    <meta name="description" content="Enterarse de los servicios que te ofrece la Biblioteca Portal del Conocimiento de Knowledge City tales como préstamo de libros y otros materiales.">
 </head>
 <body>
     <!-- Header con logo y barra de navegación -->
