--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Portal del Conocimiento</title>
+    <title>Biblioteca Portal del Conocimiento</title>
+    <meta name="description" content="Biblioteca Portal del Conocimiento de Knowledge City, un lugar de conocimiento y esparcimiento abierto a toda la comunidad.>
 </head>
 <body>
     <!-- Header con logo y barra de navegación -->
