--- a/pages/libros.html
+++ b/pages/libros.html
@@ -7,7 +7,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
     <title>Catálogo de Libros - Búsqueda de libros</title>
-    <meta name="description" content="Buscar libros de la colección de la Biblioteca Portal del Conocimiento de Knowledge City por tema o materia, título, autor, editorial y otros criterios"
+    <meta name="description" content="Buscar libros de la colección de la Biblioteca Portal del Conocimiento de Knowledge City por tema o materia, título, autor, editorial y otros criterios">
 </head>
 <body>
     <!-- Header con logo y barra de navegación -->
