--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
     <title>Sobre nosotros - Nuestra historia, horarios y personal</title>
-    <meta name="description" content="Información sobre la Biblioteca Portal del Conocimiento de Knowledge City: su historia, horarios de atención, objetivos y también nuestros bibliotecarios."
+    <meta name="description" content="Información sobre la Biblioteca Portal del Conocimiento de Knowledge City: su historia, horarios de atención, objetivos y también nuestros bibliotecarios.">
 </head>
 <body>
     <!-- Header con logo y barra de navegación -->
