--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <title>Recursos de información - Libros y otros materiales</title>
-    <meta name="description" content="Además de libros sobre diversos temas, la Biblioteca del Conocimiento de Knowledge City cuenta con revistas y cómics."
+    <meta name="description" content="Además de libros sobre diversos temas, la Biblioteca del Conocimiento de Knowledge City cuenta con revistas y cómics.">
 </head>
 <body>
     <!-- Header con logo y barra de navegación -->
