--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="description" content="Biblioteca Portal del Conocimiento de Knowledge City, un lugar de conocimiento y esparcimiento abierto a toda la comunidad.>
 </head>
 <body>
-    <!-- Header con logo y barra de navegación -->
+  <!-- Header con logo y barra de navegación -->
     <header class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="assets/img/logobiblio.webp" alt="logo de la biblioteca"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/img/logobiblio.webp" alt="Logo de la biblioteca"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,21 +22,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/recursos.html">Recursos</a>
+                    <a class="nav-link" href="recursos.html">Recursos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                    <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>           
             </ul>
         </div>
-    </header>
-    <!-- Fin Header con logo y barra de navegación -->
+    </header><!-- Fin Header con logo y barra de navegación -->
     <!-- Bienvenida -->
     <main id="home">
         <section id="welcometext">
