--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Header con logo y barra de navegación -->
     <header class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="assets/img/logobiblio.webp" alt="Logo de la biblioteca"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/img/logobiblio.webp" alt="Logo de la biblioteca"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
