--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="recursos.html">Recursos</a>
+                    <a class="nav-link" href="pages/recursos.html">Recursos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="servicios.html">Servicios</a>
@@ -42,7 +42,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2 style="color: green";>Tu lugar para aprender y divertirte</h2>
+                <h2 style="color: blue";>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
