--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/recursos.html">Recursos</a>
+                    <a class="nav-link" href="pages/recursos.html">Recursos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/servicios.html">Servicios</a>
+                    <a class="nav-link" href="pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
                 </li>           
             </ul>
         </div>
@@ -41,7 +41,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2 style="color: magenta";>Tu lugar para aprender y divertirte</h2>
+                <h2 style="color: red";>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
