--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2 style="color: brown";>Tu lugar para aprender y divertirte</h2>
+                <h2 style="color: pink";>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
@@ -69,7 +69,7 @@
     <!-- Fin Footer -->
     <!-- Fin Footer -->
     <!-- Script de Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
         crossorigin="anonymous"></script>
     <!-- Fin Script de Bootstrap -->
