--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Biblioteca Portal del Conocimiento</title>
     <meta name="description" content="Biblioteca Portal del Conocimiento de Knowledge City, un lugar de conocimiento y esparcimiento abierto a toda la comunidad.>
 </head>
 <body>
- <!-- Header con logo y barra de navegación -->
+    <!-- Header con logo y barra de navegación -->
     <header class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href""><img src="assets/img/logobiblio.webp" alt="Logo de la biblioteca"></a>
+            <a class="navbar-brand" href="#"><img src="assets/img/logobiblio.webp" alt="Logo de la biblioteca"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,13 +24,13 @@
                     <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/recursos.html">Recursos</a>
+                    <a class="nav-link" href="pages/recursos.html">Recursos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/servicios.html">Servicios</a>
+                    <a class="nav-link" href="pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
                 </li>           
             </ul>
         </div>
@@ -41,7 +41,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2 style="color: orange";>Tu lugar para aprender y divertirte</h2>
+                <h2 style="color: red";>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
@@ -69,9 +69,7 @@
     <!-- Fin Footer -->
     <!-- Fin Footer -->
     <!-- Script de Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
-        crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Fin Script de Bootstrap -->
 </body>
 </html>
