--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Biblioteca Portal del Conocimiento</title>
     <meta name="description" content="Biblioteca Portal del Conocimiento de Knowledge City, un lugar de conocimiento y esparcimiento abierto a toda la comunidad.>
 </head>
@@ -21,16 +21,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/recursos.html">Recursos</a>
+                    <a class="nav-link" href="./pages/recursos.html">Recursos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                    <a class="nav-link" href="./pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>           
             </ul>
         </div>
@@ -41,7 +41,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2 style="color: red";>Tu lugar para aprender y divertirte</h2>
+                <h2 style="color: pink";>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
