--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header con logo y barra de navegación -->
     <header class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../assets/img/logobiblio.webp" alt="Logo de la biblioteca"></a>
+            <a class="navbar-brand" href="../index.html"><img src="/assets/img/logobiblio.webp" alt="Logo de la biblioteca"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,7 +41,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2 style="color: red";>Tu lugar para aprender y divertirte</h2>
+                <h2 style="color: greened";>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
