--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2 style="color: red";>Tu lugar para aprender y divertirte</h2>
+                <h2>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
