Update index.html with nav tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
             </button>
         </div>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <nav class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="pages/contacto.html">Contacto</a>
                 </li>           
             </ul>
-        </div>
+        </nav>
     </header><!-- Fin Header con logo y barra de navegación -->
     <!-- Bienvenida -->
     <main id="home">
@@ -41,7 +41,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2>Tu lugar para aprender y divertirte</h2>
+                <h2 style="color: red";>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
