--- a/index.html
+++ b/index.html
@@ -17,23 +17,24 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
+            <nav class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/recursos.html">Recursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                    </li>           
+                </ul>
+            </nav>
         </div>
-        <nav class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/recursos.html">Recursos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
-                </li>           
-            </ul>
-        </nav>
+        
     </header><!-- Fin Header con logo y barra de navegación -->
     <!-- Bienvenida -->
     <main id="home">
@@ -41,7 +42,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2>Tu lugar para aprender y divertirte</h2>
+                <h2 style="color:purple";>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
