--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                     </li>           
                 </ul>
             </nav>
-        </div>
-        
+        </div>       
     </header><!-- Fin Header con logo y barra de navegación -->
     <!-- Bienvenida -->
     <main id="home">
@@ -42,7 +41,7 @@
             <!-- ANIMACION -->
             <div class="animate__animated animate__heartBeat">
                 <h1>Bienvenido al sitio web de la Biblioteca Portal del Conocimiento</h1>
-                <h2 style="color:purple";>Tu lugar para aprender y divertirte</h2>
+                <h2 style="color:green";>Tu lugar para aprender y divertirte</h2>
             </div>            
         </section>
     </main>
@@ -70,7 +69,7 @@
     <!-- Fin Footer -->
     <!-- Fin Footer -->
     <!-- Script de Bootstrap -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <!-- Fin Script de Bootstrap -->
 </body>
 </html>
